src/test/deca/context/valid/homemade/test/test328_affectation_sous_type.deca
// test valide de la règle 3.28


{
    int a = 1;
    float b = 1.0;
    boolean c = true;
    boolean d = false;
    float e = 1;
}