src/test/deca/context/invalid/homeMade/tests/test_affectation_sous_type328/test_affectation_sous_type328_5.deca
// test invalide de la règle 3.28

{
    float a = true;
}
